Fixed small CSS issues including Projects section overlapping with itself

--- a/styles.css
+++ b/styles.css
@@ -309,7 +309,7 @@ button:active {
         min-height: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: safe center;
     }
 }
 
@@ -399,7 +399,7 @@ section {
     border-bottom: var(--blue5) solid 4px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: safe center;
 }
 
 #scrollbox {
@@ -411,18 +411,21 @@ section {
     overflow-x: hidden;
 }
 
+#scrollbox > section {
+    flex-shrink: 0;
+}
+
 .skill-images {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    gap: var(--margin-m);
 }
 
 .skill-image {
-    display: inline;
+    display: block;
     width: 3rem;
-    margin: 1rem auto;
-    align-items: center;
 }
 
 /* Star Particle Animations
